# LegalCopilot-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PRODUCT_SPEC.md  PROJECT_GOALS.md  README.md  SELF_TEST.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py  migrations.py  models.py  schemas.py  tasks.py
app/llm/: __init__.py  client.py
app/services/: case_agent.py  case_analyzer.py  citation_reviewer.py  document_parser.py  embedding_index.py  embedding_provider.py  embeddings.py  legal_chunker.py  mixed_retriever.py  report_export.py  report_writer.py  retriever.py  seed.py  upload_security.py
app/workflows/: __init__.py  legal_report_graph.py
data/: sample_laws.jsonl
docs/: API_GUIDE_DETAILED.md  API_REFERENCE.md  CONFIGURATION.md  DEMO_SCRIPT.md  JOB_MATERIALS.md  LEARNING_JOURNAL.md  openapi.json
docs/decisions/: 0001-use-sqlite-first.md  0002-keep-offline-mode.md  0003-review-citations.md  0004-use-langgraph.md  0005-migrate-to-postgresql-pgvector.md  0006-no-chain-of-thought.md  README.md
eval/: __init__.py  dataset.jsonl  metrics.py  run_eval.py
eval/results/: latest.json  latest.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
scripts/: reindex_embeddings.py  run_self_test.py
tests/: __init__.py  test_api.py  test_fourth_week.py  test_second_week.py  test_services.py  test_third_week.py
