[project]
name = "legal-copilot-agent"
version = "0.3.0"
description = "A traceable legal RAG and agent workflow portfolio project"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic>=2.9,<3",
  "python-multipart>=0.0.12,<1",
  "python-docx>=1.1,<2",
  "pypdf>=5.0,<6",
  "httpx>=0.27,<1",
  "python-dotenv>=1.0,<2",
  "langgraph>=1.0,<2",
  "reportlab>=4.2,<5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
