[project]
name = "legal-copilot-agent"
version = "0.4.0"
description = "A traceable legal RAG and agent workflow portfolio project"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic>=2.9,<3",
  "python-multipart>=0.0.12,<1",
  "python-docx>=1.1,<2",
  "pypdf>=5.0,<6",
  "httpx>=0.27,<1",
  "python-dotenv>=1.0,<2",
  "langgraph>=1.0,<2",
  "reportlab>=4.2,<5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 110
extend-exclude = ["eval/results"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
exclude = ["frontend", "eval/results"]
